kong/kong-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: petstore-ingress
  annotations:
    konghq.com/strip-path: "false"
spec:
  ingressClassName: kong
  rules:
    - host: mini
      http:
        paths:
          - path: /api/products/.*/reviews
            pathType: Prefix
            backend:
              service:
                name: review-service
                port:
                  number: 80
          # Productos
          - path: /api/products
            pathType: Prefix
            backend:
              service:
                name: product-service
                port:
                  number: 80
          - path: /api/products/
            pathType: Prefix
            backend:
              service:
                name: product-service
                port:
                  number: 80
          # Categorías
          - path: /api/categories
            pathType: Prefix
            backend:
              service:
                name: category-service
                port:
                  number: 80
          - path: /api/categories/
            pathType: Prefix
            backend:
              service:
                name: category-service
                port:
                  number: 80
          # Usuarios
          - path: /api/users
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 80
          # Carrito
          - path: /api/cart
            pathType: Prefix
            backend:
              service:
                name: cart-service
                port:
                  number: 80
          # Pedidos
          - path: /api/orders
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 80
          # Búsqueda
          - path: /api/search
            pathType: Prefix
            backend:
              service:
                name: search-service
                port:
                  number: 80
